# cmake

greeter/: CMakeLists.txt  greeter.cpp
